# GrekRenderer

./: .gitignore  CMakeLists.txt  main.cpp
assets/: characters.txt
include/directx/: d3dx12.h
lib/: freetyped.lib
notebook/: d3d12_notebook.md
shaders/: triangle.ps  triangle.vs  ui.ps  ui.vs
shaders/cache/: triangle.ps  triangle.vs  ui.ps  ui.vs
src/: logic.h
src/common/: font_loader.h  logger.h  model_loader.h  obj_loader.h
src/dx12/: dx12_framework.h  dx12_transformation.h  dx12_ui.h  square_pyramid_sample.hpp
src/win32/: common.h  window.h
textures/: Lanting_tex.sdfmeta  font_uv_coords.txt  sdf_uv_coords.txt
